[package]
name = "sn_events_batch"
version = "0.1.0"
edition = "2024"

[dependencies]
starknet = "0.12"
hashlink = "0.9.1"
thiserror = "1.0.32"
tracing = { version = "0.1.38", features = [ "log" ], default-features = false }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter", "json" ] }
tokio = { version = "1.39.2", features = [ "full" ] }
tokio-util = "0.7.12"
bitflags = "2.6.0"
futures = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0", features = [ "derive" ] }
url = "2"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }
